--- a/config.env
+++ b/config.env
@@ -47,8 +47,8 @@ RSS_COMMAND = ""
 RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""
 # Private Files
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
+ACCOUNTS_ZIP_URL = "https://jc.nsfw4k.workers.dev/0:/Credentials%20and%20Sa's/jmclane/botssjmc1/accounts.zip"
+TOKEN_PICKLE_URL = "https://jc.nsfw4k.workers.dev/0:/Credentials%20and%20Sa's/jmclane/botssjmc1/token_sa.pickle"
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
