--- a/config.env
+++ b/config.env
@@ -35,8 +35,8 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://anupammittalst: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@github.com/anupammittalst/anupamh"
+UPSTREAM_BRANCH = "h-code"
 # qBittorrent/Aria2c
 BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
